Including alias event in the code

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <title>Hello World</title>
     <script>
-        !function(){var analytics=window.analytics=window.analytics||[];if(!analytics.initialize)if(analytics.invoked)window.console&&console.error&&console.error("Segment snippet included twice.");else{analytics.invoked=!0;analytics.methods=["trackSubmit","trackClick","trackLink","trackForm","pageview","identify","reset","group","track","ready","alias","debug","page","once","off","on","addSourceMiddleware","addIntegrationMiddleware","setAnonymousId","addDestinationMiddleware"];analytics.factory=function(e){return function(){var t=Array.prototype.slice.call(arguments);t.unshift(e);analytics.push(t);return analytics}};for(var e=0;e<analytics.methods.length;e++){var key=analytics.methods[e];analytics[key]=analytics.factory(key)}analytics.load=function(key,e){var t=document.createElement("script");t.type="text/javascript";t.async=!0;t.src="https://cdn.segment.com/analytics.js/v1/" + key + "/analytics.min.js";var n=document.getElementsByTagName("script")[0];n.parentNode.insertBefore(t,n);analytics._loadOptions=e};analytics._writeKey="gtLtYDopRzgWoPNjJMbqiqIMKSOBG0aV";;analytics.SNIPPET_VERSION="4.15.3";
-            analytics.load("gtLtYDopRzgWoPNjJMbqiqIMKSOBG0aV");
+        !function(){var analytics=window.analytics=window.analytics||[];if(!analytics.initialize)if(analytics.invoked)window.console&&console.error&&console.error("Segment snippet included twice.");else{analytics.invoked=!0;analytics.methods=["trackSubmit","trackClick","trackLink","trackForm","pageview","identify","reset","group","track","ready","alias","debug","page","once","off","on","addSourceMiddleware","addIntegrationMiddleware","setAnonymousId","addDestinationMiddleware"];analytics.factory=function(e){return function(){var t=Array.prototype.slice.call(arguments);t.unshift(e);analytics.push(t);return analytics}};for(var e=0;e<analytics.methods.length;e++){var key=analytics.methods[e];analytics[key]=analytics.factory(key)}analytics.load=function(key,e){var t=document.createElement("script");t.type="text/javascript";t.async=!0;t.src="https://cdn.segment.com/analytics.js/v1/" + key + "/analytics.min.js";var n=document.getElementsByTagName("script")[0];n.parentNode.insertBefore(t,n);analytics._loadOptions=e};analytics._writeKey="n1MxAv4FBC6ymTbdNGThYCheYugpsGtK";;analytics.SNIPPET_VERSION="4.15.3";
+            analytics.load("n1MxAv4FBC6ymTbdNGThYCheYugpsGtK");
             analytics.page();
         }}();
     </script>
@@ -13,9 +13,10 @@
 <body>
 Hello World!
     <a>
-    <button type="button" id="track_event" onclick="myTrackFunction()">Click Me to track!</button>
-    <button type="button" id="identify_event" onclick="myIdentifyFunction()">Click Me to identify!</button>
-    <button type="button" id="group_event" onclick="myGroupFunction()">Click Me to group!</button>
+        <button type="button" id="track_event" onclick="myTrackFunction()">Click Me to track!</button>
+        <button type="button" id="identify_event" onclick="myIdentifyFunction()">Click Me to identify!</button>
+        <button type="button" id="group_event" onclick="myGroupFunction()">Click Me to group!</button>
+        <button type="button" id="alias_event" onclick="myAliasFunction()">Click Me to create an alias!</button>
     </a>
     <script>
         function myTrackFunction(){
@@ -34,7 +35,11 @@ Hello World!
                 category:'Cricket Leinster'
             });
         }
-
+        function myAliasFunction(){
+            var str = "Simran";
+            var enc = window.btoa(str);
+            analytics.alias(enc);
+        }
     </script>
 </body>
 </html>
