Updating Identify message to include a userId

--- a/index.html
+++ b/index.html
@@ -27,7 +27,8 @@ Hello World!
         function myIdentifyFunction(){
             analytics.identify({
                 name:'Simran',
-                age:'31'
+                age:'31',
+                userId: 'appboy_9876'
             });
         }
         function myGroupFunction(){
