Updating Identify message to include a userId

--- a/index.html
+++ b/index.html
@@ -25,10 +25,11 @@ Hello World!
             });
         }
         function myIdentifyFunction(){
-            analytics.identify({
-                name:'Simran',
-                age:'31',
-                userId: 'appboy_9876'
+            analytics.identify("97980cfea0067", {
+                name: "Peter Gibbons",
+                email: "peter@example.com",
+                plan: "premium",
+                logins: 5
             });
         }
         function myGroupFunction(){
