--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@ Hello World!
         <button type="button" id="track_event" onclick="myTrackFunction()">Click Me to track!</button>
         <button type="button" id="identify_profile_1" onclick="myIdentifyFirstProfileFunction()">Click Me to identify useExisting_1!</button>
         <button type="button" id="identify_profile_2" onclick="myIdentifySecondProfileFunction()">Click Me to identify useExisting_2!</button>
+        <button type="button" id="track_opt_stat_change" onclick="myTrackOptStat()">Click Me to track!</button>
         <button type="button" id="group_event" onclick="myGroupFunction()">Click Me to group!</button>
         <button type="button" id="alias_event" onclick="myAliasFunction()">Click Me to create an alias!</button>
     </a>
@@ -23,6 +24,12 @@ Hello World!
         function myTrackFunction(){
             analytics.track('Something Happened',{
                 comments:`blabla`
+            });
+        }
+        function myTrackOptStat(){
+            analytics.track('Opt Status Changed',{
+                emailSubscriptionOptNumber:`Universal`,
+                emailSubscriptionOptIndicator: true
             });
         }
         function myIdentifyFirstProfileFunction(){
