Added email in Track Function

--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@ Hello World!
     <script>
         function myTrackFunction(){
             analytics.track('Something Happened',{
-                comments:`blabla`
+                comments:`blabla`,
+                email: 'singh.sj90@gmail.com'
             });
         }
         function myTrackOptStat(){
