Moving to US workspace for event tracking

--- a/index.html
+++ b/index.html
@@ -24,7 +24,11 @@ Hello World!
         function myTrackFunction(){
             analytics.track('Something Happened',{
                 comments:`blabla`,
-                email: 'singh.sj90@gmail.com'
+                email: 'singh.sj90@gmail.com',
+                sport: 'Cricket',
+                function: 'T20 World Cup',
+                team: 'India',
+                opponent:'Pakistan'
             });
         }
         function myTrackOptStat(){
