--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@ Hello World!
   <input type="text" id="fname" name="fname"><br>
   <label for="lname">Last name:</label><br>
   <input type="text" id="lname" name="lname">
-  <input type="submit" value="Submit">
+  <input id="submit" type="submit" value="Submit">
 </form>
 </body>
 </html>
