--- a/index.html
+++ b/index.html
@@ -33,7 +33,9 @@ Hello World!
   <input id="submit" type="submit" value="Submit" onClick="formSubmission()">
 </form>
      <script>
-         function onFormSuccess(event) {
+         var myform = document.getElementById("userDetailsForm");
+         myform.addEventListener("submit", submitForm);
+         function submitForm() {
             var form = document.querySelector('#userDetailsForm');
             var fname = form.querySelector('#fname');
             var lname = form.querySelector('#lname');
