--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@ Hello World!
         <button type="button" id="alias_profile_2" onclick="myIdentifyThirdProfileFunction()">Click Me to alias!</button>
         <button type="button" id="alias_event" onclick="myAliasFunction()">Click Me to create an alias!</button>
     </a>
-    <form id= "userDetailsForm" action="/">
+    <form id= "userDetailsForm" onSubmit="submitForm()">
   <label for="fname">First name:</label><br>
   <input type="text" id="fname" name="fname" value=""><br>
   <label for="lname">Last name:</label><br>
@@ -33,8 +33,6 @@ Hello World!
   <input id="submit" type="submit" value="Submit" onClick="formSubmission()">
 </form>
      <script>
-         var myform = document.getElementById("userDetailsForm");
-         myform.addEventListener("submit", submitForm);
          function submitForm() {
             var form = document.querySelector('#userDetailsForm');
             var fname = form.querySelector('#fname');
