--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@ Hello World!
   <input type="text" id="fname" name="fname" value=""><br>
   <label for="lname">Last name:</label><br>
   <input type="text" id="lname" name="lname" value="">
-  <input id="submit" type="submit" value="Submit" onClick="formSubmission()">
+  <input id="submit" type="submit" value="Submit">
 </form>
      <script>
          function submitForm() {
@@ -46,16 +46,6 @@ Hello World!
             });
   // Rest of the success callback code
 }
-        function formSubmission(){
-            var form = document.querySelector('#userDetailsForm');
-            var fname = form.querySelector('#fname');
-            var lname = form.querySelector('#lname');
-             window.dataLayer = window.dataLayer || [];
-             window.dataLayer.push({
-                'fname': fname,
-                'lname': lname
-            });
-        }
         function myTrackFunction(){
             analytics.track('Something Happened',{
                 comments:`blabla`,
