--- a/index.html
+++ b/index.html
@@ -24,22 +24,22 @@ Hello World!
   <label for="fname">First name:</label><br>
   <input type="text" id="fname" name="fname" value=""><br>
   <label for="lname">Last name:</label><br>
-  <input type="text" id="lname" name="lname" value="">
+  <input type="text" id="lname" name="lname" value=""><br>
   <label for="email">Email Address:</label><br>
-  <input type="text" id="email" name="email" value="">
+  <input type="text" id="email" name="email" value=""><br>
   <label for="userId">User Id:</label><br>
-  <input type="text" id="userId" name="userId" value="">
-  <input id="submit" type="submit" value="Submit">
+  <input type="text" id="userId" name="userId" value=""><br>
+  <input id="submit" type="submit" value="Submit"><br>
 </form>
 <form id= "aliasForm" onSubmit="aliasFunction()">
   <label for="newId">New User Id:</label><br>
-  <input type="text" id="newId" name="newId" value="">
-  <input id="submit" type="submit" value="Submit">
+  <input type="text" id="newId" name="newId" value=""><br>
+  <input id="submit" type="submit" value="Submit"><br>
 </form>
 <form id= "groupForm" onSubmit="groupFunction()">
   <label for="groupId">Group Id:</label><br>
-  <input type="text" id="groupId" name="groupId" value="">
-  <input id="submit" type="submit" value="Submit">
+  <input type="text" id="groupId" name="groupId" value=""><br>
+  <input id="submit" type="submit" value="Submit"><br>
 </form>
      <script>
          function submitForm() {
